; ModuleID = '/home/carl/AnghaBench/git/extr_strbuf.c_strbuf_fread.c'
source_filename = "/home/carl/AnghaBench/git/extr_strbuf.c_strbuf_fread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i64, i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @strbuf_fread(%struct.strbuf* %0, i64 %1, i32* %2) #0 {
  %4 = alloca %struct.strbuf*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store %struct.strbuf* %0, %struct.strbuf** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %10 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  store i64 %11, i64* %8, align 8
  %12 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %13 = load i64, i64* %5, align 8
  %14 = call i32 @strbuf_grow(%struct.strbuf* %12, i64 %13)
  %15 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %16 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %15, i32 0, i32 2
  %17 = load i64, i64* %16, align 8
  %18 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %19 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %18, i32 0, i32 1
  %20 = load i64, i64* %19, align 8
  %21 = add nsw i64 %17, %20
  %22 = load i64, i64* %5, align 8
  %23 = load i32*, i32** %6, align 8
  %24 = call i64 @fread(i64 %21, i32 1, i64 %22, i32* %23)
  store i64 %24, i64* %7, align 8
  %25 = load i64, i64* %7, align 8
  %26 = icmp ugt i64 %25, 0
  br i1 %26, label %27, label %35

27:                                               ; preds = %3
  %28 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %29 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %30 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %29, i32 0, i32 1
  %31 = load i64, i64* %30, align 8
  %32 = load i64, i64* %7, align 8
  %33 = add i64 %31, %32
  %34 = call i32 @strbuf_setlen(%struct.strbuf* %28, i64 %33)
  br label %42

35:                                               ; preds = %3
  %36 = load i64, i64* %8, align 8
  %37 = icmp eq i64 %36, 0
  br i1 %37, label %38, label %41

38:                                               ; preds = %35
  %39 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %40 = call i32 @strbuf_release(%struct.strbuf* %39)
  br label %41

41:                                               ; preds = %38, %35
  br label %42

42:                                               ; preds = %41, %27
  %43 = load i64, i64* %7, align 8
  ret i64 %43
}

declare dso_local i32 @strbuf_grow(%struct.strbuf*, i64) #1

declare dso_local i64 @fread(i64, i32, i64, i32*) #1

declare dso_local i32 @strbuf_setlen(%struct.strbuf*, i64) #1

declare dso_local i32 @strbuf_release(%struct.strbuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
